--- a/src/index.css
+++ b/src/index.css
@@ -23,10 +23,9 @@ hmtl, body{
   display: grid;
   place-items: center;
   margin: 10px;
-  min-height: 100vh;
-  
+  min-height: 100vh;  
 }
-h1 
+.header h1 
 {
   letter-spacing: 5px;
   position:relative;
@@ -38,7 +37,8 @@ h1
   color:rgba(36, 36, 37, 0.747);
   -webkit-text-stroke: 0.005vw rgb(8,8,8);
 }
-h1::before
+
+.header h1::before
 {
   content: attr(data-text);
   position: absolute;
@@ -63,8 +63,47 @@ h1::before
   }
 }
 
+.skew
+{
+  content: "";
+  position: relative;
+  background-image: linear-gradient( black,rgb(7,7,7));
+  height: 120px;
+  bottom: -70px;
+  transform: skewY(-2deg)
+  
+}
 
+.notability
+{
+  padding-top: 100px;
+  background-image: linear-gradient(rgb(7,7,7), black);
+  
+}
 
+.notability h1
+{
+  position: relative;
+  font-size: 60px;
+  text-transform: uppercase;
+  display: grid;
+  color:white;
+  padding-left: 70%;
+  letter-spacing: 5px;
+  top: -110px;
+  
+  
+}
+.notability h2
+{
+  position: relative;
+  text-transform: uppercase;
+  color: #FFC0CB;
+  padding-left: 70%;
+  font-size: 30px;
+  font-weight: 100;
+  top: -110px;
+}
 .webgl
 {
   position:absolute;
@@ -73,15 +112,16 @@ h1::before
   outline:none;
   mix-blend-mode: exclusion;
 }
+
 .About
 {
-background: #000;
+background-color: rgb(0, 0, 0);
 position: relative;
 top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
 width: 100%;
-
+font-size: 20px;
 }
 
 .About span
@@ -127,4 +167,10 @@ display: block;
     letter-spacing: 8px;
     margin-bottom: -40px;
   }
+}
+.About_text
+{
+  color: white;
+  padding-left: 10%;
+  margin-top: 10px;
 }
