--- a/src/index.css
+++ b/src/index.css
@@ -1,38 +1,40 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
-
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
-
-body {
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   overflow-x: hidden;
 }
 
-hmtl, body{
-  place-items: center;
-  height: 100vh;
-  background: #000
+.webgl
+{
+  position:absolute;
+  top:0;
+  left:0;
+  outline:none;
+  mix-blend-mode: exclusion;
 }
 
+.hcontainer 
+{
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(5, 200px);
+  background-color: black;
+}
 .header
 {
   position:relative;
-  display: grid;
-  place-items: center;
+  grid-row:1;
+  grid-column: 1;
   margin: 10px;
-  min-height: 100vh;  
+  
 }
 .header h1 
 {
   letter-spacing: 5px;
   position:relative;
-  font-size: 140px;
+  font-size: 50px;
   text-transform: uppercase;
-  display: grid;
-  place-items: center;
   margin: 10px;
   color:rgba(36, 36, 37, 0.747);
   -webkit-text-stroke: 0.005vw rgb(8,8,8);
@@ -46,7 +48,7 @@ hmtl, body{
   left: 0;
   width:0;
   height: 100%;
-  color: #00ffff;
+  color: #ffffff;
   border-right: 2px solid #ff0077;
   overflow: hidden;
   animation: animate 6s linear infinite;
@@ -59,70 +61,35 @@ hmtl, body{
   }
   70%, 90%
   {
-    width: 110%;
+    width: 100%;
   }
-}
-
-.skew
-{
-  content: "";
-  position: relative;
-  background-image: linear-gradient( black,rgb(7,7,7));
-  height: 120px;
-  bottom: -70px;
-  transform: skewY(-2deg)
-  
-}
-
-.notability
-{
-  padding-top: 100px;
-  background-image: linear-gradient(rgb(7,7,7), black);
-  
-}
-
-.notability h1
-{
-  position: relative;
-  font-size: 60px;
-  text-transform: uppercase;
-  display: grid;
-  color:white;
-  padding-left: 70%;
-  letter-spacing: 5px;
-  top: -110px;
-  
-  
-}
-.notability h2
-{
-  position: relative;
-  text-transform: uppercase;
-  color: #FFC0CB;
-  padding-left: 70%;
-  font-size: 30px;
-  font-weight: 100;
-  top: -110px;
-}
-.webgl
-{
-  position:absolute;
-  top:0;
-  left:0;
-  outline:none;
-  mix-blend-mode: exclusion;
 }
 
 .About
 {
-background-color: rgb(0, 0, 0);
-position: relative;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
-width: 100%;
-font-size: 20px;
+  display:grid;
+  grid-template-columns: repeat(5, 1fr);
+  background-color: black;
 }
+.card 
+{
+  z-index: 10;
+  grid-column: 2;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  padding: 1.6%;
+  margin: 10px;
+  position: absolute;
+  top: 92%;
+  left: 25%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  font-size: 20px;
+  width: 450px;
+}
+
+
 
 .About span
 {
@@ -132,21 +99,19 @@ display: block;
 
 .text1
 { 
-  color:white;
-  padding-left: 10%;
+  color:rgb(223, 202, 157);
   font-size: 60px;
   font-weight: 700;
   letter-spacing: 8px;
-  margin-bottom: 20px;
-  background: black;
+  margin-bottom: 5px;
   position: relative;
   animation: text 3s 1;
 }
 .text2
 {
   font-size: 30px;
-  color: #FFC0CB;
-  padding-left: 10%;
+  color: #e79aa7;
+  
 
 }
 
@@ -155,22 +120,21 @@ display: block;
   0%
   {
     color:black;
-    margin-bottom: -40px;
+    margin-bottom: -10px;
   }
   30%
   {
-    letter-spacing:25px;
-    margin-bottom: -40px;
+    letter-spacing:20px;
+    margin-bottom: -10px;
   }
   85%
   {
     letter-spacing: 8px;
-    margin-bottom: -40px;
+    margin-bottom: -10px;
   }
 }
 .About_text
 {
-  color: white;
-  padding-left: 10%;
+  color: rgb(0, 0, 0);
   margin-top: 10px;
 }
