--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,11 @@
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  
 }
-
+html, body{
+  background-color: rgb(41, 38, 38);
+}
 .webgl
 {
   position:absolute;
@@ -13,7 +16,6 @@
   outline:none;
   mix-blend-mode: exclusion;
 }
-
 .hcontainer 
 {
   display: grid;
@@ -39,7 +41,6 @@
   color:rgba(36, 36, 37, 0.747);
   -webkit-text-stroke: 0.005vw rgb(8,8,8);
 }
-
 .header h1::before
 {
   content: attr(data-text);
@@ -75,7 +76,7 @@
 {
   z-index: 10;
   grid-column: 2;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.932);
   border-radius: 10px;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
   padding: 1.6%;
@@ -88,15 +89,11 @@
   font-size: 20px;
   width: 450px;
 }
-
-
-
 .About span
 {
 text-transform: uppercase;
 display: block;
 }
-
 .text1
 { 
   color:rgb(223, 202, 157);
@@ -114,7 +111,6 @@ display: block;
   
 
 }
-
 @keyframes text
 {
   0%
@@ -137,4 +133,69 @@ display: block;
 {
   color: rgb(0, 0, 0);
   margin-top: 10px;
+}
+
+.Notability
+{
+  margin-right: 80px;
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
+  margin-top: 50px;
+  background-color: rgb(41, 38, 38);
+  
+}
+.Notability h1
+{
+  text-align: center;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  grid-column: 4 / 6;
+  color: rgb(219, 219, 219);
+  font-size: 50px;
+  
+}
+.Notability h2
+{
+  text-align: center;
+  grid-column: 4 / 6;
+  grid-row: 2;
+  color: rgb(133, 158, 170);
+  font-size: 30px;
+  padding-bottom: 10px;
+}
+.Notability body1
+{
+  background-color: rgb(47, 51, 53);
+  color: white;
+  grid-column: 4;
+  grid-row: 3;
+  font-size: 20px;
+  padding: 20px;
+  border-style: solid ;
+  border-radius: 1px;
+  border-color: black;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+  height: 30vh;
+}
+.Notability body2
+{
+  background-color: rgb(48, 44, 44);
+  color: white;
+  grid-column: 5;
+  grid-row: 3;
+  font-size: 20px;
+  padding: 20px;
+  border-style: solid ;
+  border-radius: 1px;
+  border-color: black;
+  margin-left: 5px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+  height: 30vh;
+}
+.Notability img
+{
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 1);
+  align-items: center;
+  grid-column: 2 / 3;
+  grid-row: 3;
 }
