--- a/src/index.css
+++ b/src/index.css
@@ -172,30 +172,30 @@ display: block;
   color: white;
   grid-column: 4;
   grid-row: 3;
-  font-size: 20px;
+  font-size: 16px;
   padding: 20px;
   /*border-style: solid ;
   border-radius: 1px;
   border-color: rgba(255, 0, 85, 0.068); */
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
-  height: 45vh;
+  height: 27vh;
   border-radius: 10%;
 }
 .body2
 {
   font-family: 'Courier New', monospace;
-  background-color: rgba(250, 0, 0, 0.068);
+  background-color: rgba(89, 90, 180, 0.295);
   color: white;
   grid-column: 5;
   grid-row: 3;
-  font-size: 20px;
+  font-size: 16px;
   padding: 20px;
   /*border-style: solid ;
   border-radius: 1px;
   border-color: rgba(126, 0, 151, 0.158); */
   margin-left: 5px;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
-  height: 45vh;
+  height: 27vh;
   border-radius: 10%;
 }
 .img 
@@ -288,7 +288,7 @@ display: block;
   border-radius: 50%;
   background-color:#c1eb2a56;
   width: 490px;
-  height: 470px;
+  height: 490px;
   font-size: 15px;
   color: white;
   text-align: justify;
@@ -321,5 +321,68 @@ display: block;
   -webkit-mask-image: -webkit-gradient(linear, right top, left top, 
     from(rgba(0,0,0,1)), to(rgba(25, 3, 43, 0.178)));
   mask-image: url();  
-  
+}
+.skew
+{
+  position: absolute;
+  width: 200vh;
+  background-image: linear-gradient( rgb(5, 5, 5),rgb(5,5,5));
+  height: 300px;
+  bottom: -70px;
+  transform: skewY(-2deg);
+  top: 270%;
+}
+.button1 
+{
+  background-color: orange;
+  left: 85%;
+  top: 265%;
+  Position: absolute;
+  padding: 15px 32px;
+  z-index:10;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 25px;
+  color: rgb(255, 255, 255);
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+}
+.button1 span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button1 span:after {
+  content: "\00bb";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button1:hover span {
+  padding-right: 25px;
+}
+
+.button1:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+.button1:hover {
+  background-color:rgb(18, 0, 39);
+  color: rgb(255, 255, 255);
+}
+.JavaFinch
+{
+  background-color: white;
+  height: 100vh;
+  width: 200vh;
 }
